name:               haskell-on-heroku-tutorial
version:            1.0
build-type:         Simple
cabal-version:      >= 1.20

executable haskell-on-heroku-tutorial
  hs-source-dirs:     exec, src
  main-is:            Main.hs
  default-language:   Haskell2010
  default-extensions: DataKinds,
                      DeriveGeneric,
                      OverloadedStrings,
                      TypeFamilies,
                      TypeOperators
  ghc-options:        -O2 -Wall -threaded
  build-depends:      base,
                      aeson,
                      servant,
                      servant-server,
                      stm,
                      text,
                      transformers,
                      warp

test-suite spec
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test, src
  main-is:            Spec.hs
  default-language:   Haskell2010
  default-extensions: DataKinds,
                      DeriveGeneric,
                      OverloadedStrings,
                      TypeFamilies,
                      TypeOperators
  ghc-options:        -Wall
  build-depends:      base,
                      aeson,
                      servant,
                      servant-server,
                      stm,
                      text,
                      transformers,
                      warp,
                      hspec >= 1.3
